<resources>
    <string name="app_name">Jazbeh</string>
    <string name="about_title1">آشنایی با محصولات جذبه</string>
    <string name="about_title2" translatable="false">راهنمای استفاده از محصولات</string>
    <string name="about_title3">درباره ما</string>
    <string name="product_activity_label">لیست محصولات</string>
    <string name="about_en_title1">Introduction To Jazbe Products</string>
    <string name="about_en_title2">Product Use Guide</string>
    <string name="about_en_title3">About Us</string>
    <string name="about_t3_text1">جذبه اصطلاحی در وصف روحی و از مراتب طی طریف تصوف و عرفان ایرانی است ، به معنای کشیده شدن بنده به سوی خدا با عنایت الهی است که سبب می‌شود انسان بی واسطه کوشش و بدون دشواری طیِ منازل، ناگهان، به خداوند نزدیک شود.</string>
    <string name="about_t3_text2">در اسناد موجود از شرح حال عرفا مانند کتاب تذکره الاولیا عطارنیشابوری نقل شده این حالت بسیار شبیه ذن مدیتیشن در عرفان شرق دور وهمان مفهومی است که امروزه در جهان به اجرای قانون جذب مشهور شده جذبه نزدیکترین راه علمی و عملی دستیابی به نیروی ذهن</string>
    <string name="about_t3_text3">گروه تحقیقاتی جذبه فعالیت خود را در شبکه های مجازی از سال ۱۳۸۷ در فیس بوک،آغاز و همینک در تلگرام فعال است و همواره سعی داشته با ارائه جدید ترین و به روز ترین مطالب علمی در حوزه متافیزیک وعرفان خوانندگانش را به تفکر در هستی وا دارد تا با دیدن چالش ها به صورت علمی و عملی، از خرافات دور شده و رفته رفته به سمت رشد سطح آگاهی بشری پیش رویم.</string>
    <string name="about_t3_text4">هدف جذبه آشنا کردن شما عزیزان با قانونی انتزاعی است ،به نام قانون جذب.</string>
    <string name="about_t3_text5">قانونی که براساس آن ،هر آنچه در ذهن انسان تصور شود اعم از خوب یا بد، زشت یا زیبا در دنیای واقعی نمود خواهد یافت. سرعت و شدت به واقعیت پیوستن این تصویر ذهنی به شدت تمرکز روی آن موضوع و وضوح تصویر آن در ذهن بستگی دارد. در واقع خواسته‌هایی که تصور می‌شوند باید به گونه‌ای باشند که بتوان آنها را در ذهن حس و باور نمود. قانون جذب می‌گوید هر چه فکر کنی همان می‌شود</string>
    <string name="about_t3_text6">در این راستا گروه تحقیقاتی جذبه برای بهره مندی شما عزیزان و دستیابی هرچه سریعتر به قانون جذب، خدماتی را ارائه میدهد:</string>
    <string name="about_t3_text7">– مفتخریم برای نخستین بار تولید کننده ( موسیفی درمانی ) فایلهای صوتی تاثیر گذاری بر ذهن و مغز از طریق (( امواج بینورال – ایزوکرونیک- سابلمیینال ( به زبان فارسی ) و سلف هیپنوتیزم )) در ایران هستیم ا</string>
    <string name="about_t3_text8">-مفتخریم برگزار کننده انواع کارگاه های عملی از قبیل کنترل ذهن_ارتباط موثر_شاد زیستن و.. …هستیم که جهت دستیابی عملی و سریع شما عزیزان به نیروی بیکران ذهن ارائه میشود..</string>
    <string name="about_t3_text9">گروه تحقیقاتی جذبه امیدوار است با استفاده از این محصولات و کارگاه ها ،سد باورهای اشتباه گذشته را بشکنیم و وارد عرصه ی جدید از زندگی نوین شویم.</string>
    <string name="about_t1_text1">تکنولوژی امواج بینورال می‌تواند به شما اجازه می دهد ذهن خود را متناسب با فعالیتی که برایتان اهمیت دارد و قصد انجام آن را دارید سازمان دهید با این تکنولوژی می توانید مستقیماً ً به وضعیت‌های سودمند مدیتیشن و ادراک توسعه‌یافته دست پیدا کنید و به شکلی ارادی مغز خود را  با فعالیت مورد نظرتان  هماهنگ نمایید .</string>
    <string name="about_t1_text2">در این روش از امواج صوتی برای انتقال شنونده به فرکانس‌های برتر آگاهی استفاده می شود و حاصل آن ، قراردادن مغز در وضعیتهایی است که شکل آگاهی انسان دستخوش تحولات عمیقی در مغز  می شود.</string>
    <string name="about_t1_text3"> ساز و کار دستیابی به امواج بینورال به این شکل است که سیکل‌های صوتی خالص و دقیق با فرکانس‌های متفاوت از طریق یک هدفون استریو به مغز می‌رسد و دو نیمکره مغزی در هماهنگی با یکدیگر عمل نموده و در حقیقت سیگنال‌های صوتی خارجی پس از مدت کوتاهی دیگر شنیده نمی‌شوند و آنچه توسط مغز درک می‌گردد یک سیگنال سوم مجازی به نام فرکانس بینورال است و در پی تولید ممتد موج بینورال در مغز سلول‌های مغزی به ترتیب در پاسخ به این فرکانس  و در هماهنگی کامل با یکدیگر مرتعش می‌شوند. بدین ترتیب اصوات هماهنگ‌کننده مغزی بدون تلاش زیاد فعالیت مغز را به‌سوی الگوهای بسیار ویژه، سازمان‌یافته و منسجمی هدایت می‌کنند که این امر باعث دسترسی به وضعیت‌های جالب ‌توجه آگاهی توسعه‌یافته می‌شود.</string>
    <string name="about_t1_text4">کاری که پیشتر با سالها ریاضت و طی طریق میسر می شد امروزه تنها با مدت کوتاهی گوش کردن به یک صدای استریو بینورال ممکن  شده است.</string>
    <string name="about_t1_text5">کارکرد امواج بینورال روی مغز بسیار شبیه دارو است و امید می رود بزودی جایگزین بسیاری از داروهای رایج در جهان باشند. از این روی که این فایلها بر عملکرد مرکز فرماندهی مغز تاثیر می گذارد و  تاثیری شبیه داروها بر بدن شما دارند باید توجه کنید همانطور که مصرف خودسر دارو ها می تواند خطرناک باشد توصیه می شود این فایلها را تنها از منابع مطمئن دریافت نمایید.</string>
    <string name="about_t1_text6"> همچنین ممکن است استفاده یک فایل بینورال که برای عموم مردم هیچ خطری نداشته باشد برای یک فرد خاص خطر مرگ در پی داشته باشد لذا حتما با گرفتن تایید از منبع مذکور از اصالت آنها اطمینان حاصل فرمایید زیرا ممکن است یک فایل رایگان از یک سایت همگانی برخلاف نامش تاثیر مخربی روی مغزتان داشته باشد.</string>
    <string name="about_t1_text7">استفاده نامناسب از فایلها یا تجویز آن توسط افراد غیر متخصص ممکن است خطرات جبران ناپذیر جانی در پی داشته باشد.</string>
    <string name="about_t1_text8">همچنین دقت کنید استفاده از هر فایل برای هر شخص می تواند متفاوت باشد لذا حتما قبل از استفاده از هر فایل دستورالعمل همراه آنرا که توسط سایت معتبر ارائه می شود را مطالعه بفرمایید و نکات مطروحه را مورد توجه قرار دهید.</string>
    <string name="about_t1_text9">جذبه اولین و تنها تولید کننده فایلهای بینورال، سابلیمینال اتو هیپنوتیزم    در ایران  از شما دعوت می کند از محصولات تولید شده بازدید فرمایید.</string>
    <string name="about_t2_text1">روش استفاده از امواج بینورال</string>
    <string name="about_t2_text2"> برخلاف توضیح علمی و فنی امواج بینورال که همانند توضیح تکنولوژی استفاده شده در موبایل یا تلوزیون خیلی ساده نیست، استفاده از امواج بینورال بسیار ساده و دریافت تاثیری که این امواج روی مغز ما دارند کاملا محسوس است .</string>
    <string name="about_t2_text3"> تنها ابزار لازم برای استفاده از این تکنولوژی  یک فایل مخصوص بینورال، یک دستگاه پلیر موزیک و  یک هدفون استریو (دوگوشی) می باشد.</string>
    <string name="about_t2_text4"> درواقع اگر یک یک گوشی موبایل و هندزفری داشته باشید  آماده اید تا فایل بینورال دلخواتان را  از طریق موبایل و با هندز فری مانند یک موزیک ساده گوش کنید.</string>
    <string name="about_t2_text5"> بقیه کارها را تا رسیدن به وضعیت مطلوب به عهده فایل بگذارید. خیلی زود خودتان را در وضعیت مطلوب برای موقعیت مورد نظر خود خودتان خواهید یافت. </string>
    <string name="about_t2_text6">هرچند می توانید هنگام استفاده از امواج بینورال به کارهای دیگری هم بپردازید لیکن بیشترین تاثیر را زمانی احساس خواهید کرد که هنگام گوش دادن به امواج بینورال به کار دیگری مشغول نباشید و تمام توجه خود را به گوش دادن اختصاص دهید. </string>
    <string name="navigation_wallet_balance">اعتبار شما : 0</string>
    <string name="activity_login_title2">"ورود به حساب کاربری\nاطلاعات خود را وارد نمایید"</string>
    <string name="activity_login_forget_password">"رمز خود را فراموش کرده اید ؟"</string>
    <string name="activity_login_new_account">"ساخت حساب کاربری جدید"</string>
    <string name="activity_login_hit_password">"رمز عبور"</string>
    <string name="activity_login_hit_username">"شماره موبایل"</string>
    <string name="activity_login_next_btn">"بعدی"</string>
    <string name="title_balance">"داشبورد"</string>
    <string name="title_sell">"فروش"</string>
    <string name="title_information">"اطلاعات نماینده"</string>
    <string name="delegate_form_rules_txt1">"سیستم  همکاری در فروش ، بنا بر سیاست هایی که در پیش می گیرند، بستری را برای شما فراهم می سازند تا با فروش محصولات جذبه، به کسب درآمد از اینترنت بپردازید."</string>
    <string name="delegate_form_rules_txt2">"در این صفحه قوانین و شرایط همکاری در فروش قابل مشاهده است. همه افرادی که در بخش همکاری در فروش و بازاریابی  جذبه  ثبت‌نام می‌کنند موظف هستند از این قوانین پیروی ‌نمایند."</string>
    <string name="delegate_form_rules_txt3">"ارسال درخواست فعال شدن پنل مشارکت در فروش به معنی پذیرش تمامی این موارد می باشد."</string>
    <string name="delegate_form_rules_txt4">"۱- روند کار:"</string>
    <string name="delegate_form_rules_txt5">همکاران گرامی با اپلیکیشنی که در اختیارشان قرار داده می‌شوند محصولات موجود در فروشگاه جذبه  را در فضای مجازی به دیگران معرفی می‌نمایند و بابت هر فروش که از طریق کد معرف آن ها انجام می‌گیرد 30 درصد از قیمت محصول به عنوان پورسانت به پنل‌شان اضافه می‌گردد."</string>
    <string name="delegate_form_rules_txt6">"معرفی محصولات به دیگران، از طریق کد اختصاصی است که در پنل همکاری در فروش به شما داده می شود. زمانی که بطور مثال خانم نیازی  به عنوان همکار فروش جذبه ،کد معرف خود را که از اپ گرفتند، برای اشخاص دیگر ارسال می‌کند یا در سایت، بلاگ، کانال و یا گروه قرار می‌دهد و شخص بعد از نصب و واردشدن به اپلیکیشن کد معرف خانم نیازی را   وارد  اپ می‌کند .اپلیکیشن به طور خودکار تشخیص می‌دهد که این بازدیدکننده از لینک خانم نیازی  وارد  اپ شده و خریدار هر خریدی انجام دهد، پورسانت آن به حساب کاربری خانم نیازی  اضافه می‌شود که قابل واریز به حساب بانکی است."</string>
    <string name="delegate_form_rules_txt7">"۲- سلب مسئولیت‌:"</string>
    <string name="delegate_form_rules_txt8">"با عضویت در بخش همکاری در فروش  جذبه  ، شما به استخدام این موسسه درنمی‌آیید. هیچ قراردادی رسمی بین شما و سایت بسته نمی‌شود و شما نماینده فروش، نماینده شرکت یا بازاریاب رسمی هیچ شرکتی نخواهید بود."</string>
    <string name="delegate_form_rules_txt9">"۳-موارد ممنوع:"</string>
    <string name="delegate_form_rules_txt10">"-استفاده از اسپم و تبلیغات ناخواسته توسط  همکار در فروش، به طوری که باعث آزار مخاطب شود"</string>
    <string name="delegate_form_rules_txt11">"-دادن اطلاعات غیرواقعی، نادرست به هدف گمراه کردن خریدار"</string>
    <string name="delegate_form_rules_txt12">"-ترغیب خریدار به خرید، به هر شکلی که فریب محسوب شود"</string>
    <string name="delegate_form_rules_txt13">"-دریافت مبلغ از خریدار به هر عنوان"</string>
    <string name="delegate_form_rules_txt14">"-مدعی شدن به عنوان عوامل جذبه"</string>
    <string name="delegate_form_rules_txt15">"۴-مالی:"</string>
    <string name="delegate_form_rules_txt16">"همه تراکنش‌ها در حساب کاربری همکار قابل رویت خواهد بود"</string>
    <string name="delegate_form_rules_txt17">"پورسانت  همکار  فقط به سفارشاتی تعلق می‌گیرد که وجه آن از خریدار دریافت شده باشد (سفارش نهایی شده باشد)"</string>
    <string name="delegate_form_rules_txt18">"پرداخت پورسانت همکاران، با ثبت درخواست تسویه حساب در پنل همکاری در فروش انجام می گیرد ولی واریز پورسانت به حساب همکاران تنها در هفته اول هر ماه انجام می شود"</string>
    <string name="delegate_form_rules_txt19">"درخواست واریز پورسانت تنها زمانی مقدور خواهد بود که حداقل موجودی پورسانت شما پنجاه هزار تومان باشد"</string>
    <string name="delegate_form_rules_txt20">"همکار در فروش می‌بایست یک کارت بانکی معتبر به نام خود جهت واریز پورسانت در پنل خود ثبت نماید. مسئولیت اشتباه در وارد کردن مشخصات حساب برعهده بازاریاب است."</string>
    <string name="delegate_form_rules_txt21">"بعد از هر فروش با کد معرف شما کاربر ده درصد تخفیف دریافت می نماید تا تشویق به وارد کردن کد معرف گردد . این درصد از سهم موسسه کسر می شود نه بازاریاب . سهم بازاریاب سی درصد از مبلغ فروش هر محصول می باشد"</string>
    <string name="delegate_form_rules_txt22">"در فرم اطلاعات نماینده و در بخش نحوه همکاری در صورتی که کانال تلگرامی و یا پیج اینستاگرام با مخاطب بالا دارید اطلاعات کامل راجب نحوه تبلیغ محصولات و ای دی مربوط به کانال و پیج خود را نیز ذکر نمایید"</string>
    <string name="delegate_form_rules_txt23">"عدم رعایت قوانین فوق می‌تواند باعث مسدود شدن، حذف کامل یا جریمه  همکار شود"</string>
    <string name="delegate_form_rules_txt24">"این قوانین ممکن است در آینده تغییر کند، عضویت شما در بخش  همکاری در فروش سایت جذبه  به معنای قبول کلیه قوانین فوق است"</string>
    <string name="delegate_form_rules_txt25">"به امید همکاری گرم با شما دوست عزیز"</string>
</resources>