<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/app_group" android:checkableBehavior="single">

        <item android:id="@+id/menu_navigation_wallet_balance"
            android:title="@string/navigation_wallet_balance"
            android:icon="@drawable/ic_local_atm_"  />

        <item android:id="@+id/menu_navigation_explain"
            android:title="@string/about_en_title1"
            android:icon="@drawable/ic_help"  />

        <item android:id="@+id/menu_navigation_usage"
            android:title="@string/about_en_title2"
            android:icon="@drawable/ic_web"/>

        <item android:id="@+id/menu_navigation_sell"
            android:title="Participation in the sale"
            android:icon="@drawable/ic_style_black_24dp"/>

        <item android:id="@+id/menu_navigation_about"
            android:title="@string/about_en_title3"
            android:icon="@drawable/ic_headset"    />


    </group>
</menu>