<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Delegate.RulesActivity"
    android:background="@drawable/bg1"
    android:layoutDirection="ltr"
    android:textDirection="rtl">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/course_list_toolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        app:theme="@style/AppTheme.Toolbar"
        android:gravity="center"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="قوانین جذبه"
            android:textSize="@dimen/text_size_larg"
            android:textColor="@android:color/white"
            android:layout_gravity="center"
            android:id="@+id/toolbar_title" />

    </androidx.appcompat.widget.Toolbar>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/margin_normal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:text="قوانین مشارکت در فروش محصولات جذبه"
                android:gravity="center"
                android:padding="@dimen/margin_small"
                android:textSize="@dimen/text_size_larg"
                android:layout_marginTop="@dimen/margin_small"
                android:textColor="@color/text_color"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginRight="@dimen/margin_normal"
                android:layout_marginLeft="@dimen/margin_normal"
                android:textSize="@dimen/text_size_larg"
                android:textColor="@color/text_color2"
                android:gravity="center|right"
                android:text="@string/delegate_form_rules_txt1"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginRight="@dimen/margin_normal"
                android:layout_marginLeft="@dimen/margin_normal"
                android:textSize="@dimen/text_size_larg"
                android:textColor="@color/text_color2"
                android:gravity="center|right"
                android:text="@string/delegate_form_rules_txt2"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginRight="@dimen/margin_normal"
                android:layout_marginLeft="@dimen/margin_normal"
                android:textSize="@dimen/text_size_larg"
                android:textColor="@color/text_color2"
                android:gravity="center|right"
                android:text="@string/delegate_form_rules_txt3"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginRight="@dimen/margin_normal"
                android:layout_marginLeft="@dimen/margin_normal"
                android:textSize="@dimen/text_size_larg"
                android:textColor="@color/colorAccent"
                android:gravity="center|right"
                android:text="@string/delegate_form_rules_txt4"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginRight="@dimen/margin_normal"
                android:layout_marginLeft="@dimen/margin_normal"
                android:textSize="@dimen/text_size_larg"
                android:textColor="@color/text_color2"
                android:gravity="center|right"
                android:text="@string/delegate_form_rules_txt5"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginRight="@dimen/margin_normal"
                android:layout_marginLeft="@dimen/margin_normal"
                android:textSize="@dimen/text_size_larg"
                android:textColor="@color/text_color2"
                android:gravity="center|right"
                android:text="@string/delegate_form_rules_txt6"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginRight="@dimen/margin_normal"
                android:layout_marginLeft="@dimen/margin_normal"
                android:textSize="@dimen/text_size_larg"
                android:textColor="@color/colorAccent"
                android:gravity="center|right"
                android:text="@string/delegate_form_rules_txt7"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginRight="@dimen/margin_normal"
                android:layout_marginLeft="@dimen/margin_normal"
                android:textSize="@dimen/text_size_larg"
                android:textColor="@color/text_color2"
                android:gravity="center|right"
                android:text="@string/delegate_form_rules_txt8"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginRight="@dimen/margin_normal"
                android:layout_marginLeft="@dimen/margin_normal"
                android:textSize="@dimen/text_size_larg"
                android:textColor="@color/colorAccent"
                android:gravity="center|right"
                android:text="@string/delegate_form_rules_txt9"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginRight="@dimen/margin_normal"
                android:layout_marginLeft="@dimen/margin_normal"
                android:textSize="@dimen/text_size_larg"
                android:textColor="@color/text_color2"
                android:gravity="center|right"
                android:text="@string/delegate_form_rules_txt10"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginRight="@dimen/margin_normal"
                android:layout_marginLeft="@dimen/margin_normal"
                android:textSize="@dimen/text_size_larg"
                android:textColor="@color/text_color2"
                android:gravity="center|right"
                android:text="@string/delegate_form_rules_txt11"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginRight="@dimen/margin_normal"
                android:layout_marginLeft="@dimen/margin_normal"
                android:textSize="@dimen/text_size_larg"
                android:textColor="@color/text_color2"
                android:gravity="center|right"
                android:text="@string/delegate_form_rules_txt12"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginRight="@dimen/margin_normal"
                android:layout_marginLeft="@dimen/margin_normal"
                android:textSize="@dimen/text_size_larg"
                android:textColor="@color/text_color2"
                android:gravity="center|right"
                android:text="@string/delegate_form_rules_txt13"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginRight="@dimen/margin_normal"
                android:layout_marginLeft="@dimen/margin_normal"
                android:textSize="@dimen/text_size_larg"
                android:textColor="@color/text_color2"
                android:gravity="center|right"
                android:text="@string/delegate_form_rules_txt14"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginRight="@dimen/margin_normal"
                android:layout_marginLeft="@dimen/margin_normal"
                android:textSize="@dimen/text_size_larg"
                android:textColor="@color/colorAccent"
                android:gravity="center|right"
                android:text="@string/delegate_form_rules_txt15"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginRight="@dimen/margin_normal"
                android:layout_marginLeft="@dimen/margin_normal"
                android:textSize="@dimen/text_size_larg"
                android:textColor="@color/text_color2"
                android:gravity="center|right"
                android:text="@string/delegate_form_rules_txt16"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginRight="@dimen/margin_normal"
                android:layout_marginLeft="@dimen/margin_normal"
                android:textSize="@dimen/text_size_larg"
                android:textColor="@color/text_color2"
                android:gravity="center|right"
                android:text="@string/delegate_form_rules_txt17"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginRight="@dimen/margin_normal"
                android:layout_marginLeft="@dimen/margin_normal"
                android:textSize="@dimen/text_size_larg"
                android:textColor="@color/text_color2"
                android:gravity="center|right"
                android:text="@string/delegate_form_rules_txt18"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginRight="@dimen/margin_normal"
                android:layout_marginLeft="@dimen/margin_normal"
                android:textSize="@dimen/text_size_larg"
                android:textColor="@color/text_color2"
                android:gravity="center|right"
                android:text="@string/delegate_form_rules_txt19"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginRight="@dimen/margin_normal"
                android:layout_marginLeft="@dimen/margin_normal"
                android:textSize="@dimen/text_size_larg"
                android:textColor="@color/text_color2"
                android:gravity="center|right"
                android:text="@string/delegate_form_rules_txt20"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginRight="@dimen/margin_normal"
                android:layout_marginLeft="@dimen/margin_normal"
                android:textSize="@dimen/text_size_larg"
                android:textColor="@color/text_color2"
                android:gravity="center|right"
                android:text="@string/delegate_form_rules_txt21"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginRight="@dimen/margin_normal"
                android:layout_marginLeft="@dimen/margin_normal"
                android:textSize="@dimen/text_size_larg"
                android:textColor="@color/text_color2"
                android:gravity="center|right"
                android:text="@string/delegate_form_rules_txt22"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginRight="@dimen/margin_normal"
                android:layout_marginLeft="@dimen/margin_normal"
                android:textSize="@dimen/text_size_larg"
                android:textColor="@color/text_color2"
                android:gravity="center|right"
                android:text="@string/delegate_form_rules_txt23"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginRight="@dimen/margin_normal"
                android:layout_marginLeft="@dimen/margin_normal"
                android:textSize="@dimen/text_size_larg"
                android:textColor="@color/text_color2"
                android:gravity="center|right"
                android:text="@string/delegate_form_rules_txt24"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginRight="@dimen/margin_normal"
                android:layout_marginLeft="@dimen/margin_normal"
                android:textSize="@dimen/text_size_larg"
                android:textColor="@color/text_color2"
                android:gravity="center|right"
                android:text="@string/delegate_form_rules_txt25"/>
        </LinearLayout>

    </ScrollView>




</LinearLayout>